src/metrics/snapshots/big_code_analysis__metrics__nargs__tests__tcl_no_functions.snap
---
source: src/metrics/nargs.rs
assertion_line: 1770
expression: metric.nargs
---
{
  "total_functions": 0.0,
  "total_closures": 0.0,
  "average_functions": 0.0,
  "average_closures": 0.0,
  "total": 0.0,
  "average": 0.0,
  "functions_min": 0.0,
  "functions_max": 0.0,
  "closures_min": 0.0,
  "closures_max": 0.0
}
